<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hellow.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/TextViewMethod"
        android:text="@string/TextViewMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_cburl"
        android:layout_below="@+id/editText_cburl"
        android:layout_marginTop="8dp"
         />

    <EditText
        android:id="@+id/editText_cburl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="8dp"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:gravity="top"
         >

        <requestFocus />
    </EditText>
    
    <RadioGroup 
            android:id="@+id/radioGroup2" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:orientation="horizontal"
            android:layout_alignLeft="@+id/TextViewMethod"
	        android:layout_below="@+id/TextViewMethod"
            > 

	    <RadioButton
	        android:id="@+id/RadioPost"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="16dp"
	        android:checked="true"
	        android:text="@string/RadioPost" />

	    <RadioButton
	        android:id="@+id/RadioGet"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="16dp"
	        android:layout_marginLeft="5dp"
	        android:text="@string/RadioGet" />
    
    </RadioGroup>

    <TextView
        android:id="@+id/TextViewCBParams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup2"
        android:layout_below="@+id/radioGroup2"
        android:layout_marginTop="15dp"
        android:text="@string/TextViewCBParams" />

    <EditText
        android:id="@+id/editText_cbparams"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextViewCBParams"
        android:layout_below="@+id/TextViewCBParams"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:gravity="top" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_cbparams"
        android:layout_below="@+id/editText_cbparams"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@+id/textView1"
        android:text="@string/start_btn" />

</RelativeLayout>